2004-04-16  Matthias Clasen  <mclasen@redhat.com>

	* gtkdoc-mkdb.in (GetSignals): Organize the properties 
	descriptions to fit better with the other sections, and 
	also display information about allowed and default values. 

2004-04-15  Matthias Clasen  <mclasen@redhat.com>

	* gtkdoc-scangobj.in: Use introspection more fully to emit
	allowed ranges for integral types and default values.

	* gtkdoc-mkdb.in (GetSignals): Handle missing signal parameter
	names better.

2004-03-04  Damon Chaplin  <damon@gnome.org>

	* autogen.sh: fixed URLs to download autoconf/automake/libtool.
	Patch from Frederic L. W. Meunier.

2004-02-16  Damon Chaplin  <damon@gnome.org>

	* .cvsignore: added gtk-doc.cat and gtkdocize.

2004-02-16  Damon Chaplin  <damon@gnome.org>

	* Released 1.2.

2004-02-16  Damon Chaplin  <damon@gnome.org>

	* gtk-doc.cat.in: removed public ID for gtk-doc.dtd, since we don't
	use it any more.

Sat Feb 14 02:14:27 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.m4: Avoid unnecessary checks if gtk-doc is 
	disabled.  (#134221, Julio M. Merino Vidal)

Sat Feb 14 02:03:01 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.make: Don't create unneeded empty 
	directories.  (#134319, Julio M. Merino Vidal)

Sat Feb 14 01:37:38 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.make: Add an empty all-local target to make it work
	with non-GNU make.  (#134343, Julio M. Merino Vidal)

Wed Jan 28 00:52:00 2004  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (OutputObjectList): Avoid emitting invalid
	docbook markup if there are no objects. Partial fix for #132661.

Sun Jan 25 22:01:15 2004  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in: Accept both the old and the new XInclude
	namespace.  (#131675, Edd Dumbill)

2004-01-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gtkdoc-mkhtml.in: exit when tools return non-zero so errors can
          be caught.

Thu Jan 15 23:06:10 2004  Matthias Clasen  <maclas@gmx.de>
