@@ -893,421 +893,6 @@ compare_param_specs (const void *a, const void *b)
   return strcmp (g_param_spec_get_name (spec_a), g_param_spec_get_name (spec_b));
 }
 
-/* Its common to have unsigned properties restricted
- * to the signed range. Therefore we make this look
- * a bit nicer by spelling out the max constants.
- */
-
-static gchar*
-describe_double_constant (gdouble value)
-{
-  gchar *desc;
-
-  if (value == G_MAXDOUBLE)
-    desc = g_strdup ("G_MAXDOUBLE");
-  else if (value == G_MINDOUBLE)
-    desc = g_strdup ("G_MINDOUBLE");
-  else if (value == -G_MAXDOUBLE)
-    desc = g_strdup ("-G_MAXDOUBLE");
-  else if (value == G_MAXFLOAT)
-    desc = g_strdup ("G_MAXFLOAT");
-  else if (value == G_MINFLOAT)
-    desc = g_strdup ("G_MINFLOAT");
-  else if (value == -G_MAXFLOAT)
-    desc = g_strdup ("-G_MAXFLOAT");
-  else
-    desc = g_strdup_printf ("%lg", value);
-
-  return desc;
-}
-
-static gchar*
-describe_signed_constant (gint64 value)
-{
-  gchar *desc;
-
-  if (value == G_MAXINT)
-    desc = g_strdup ("G_MAXINT");
-  else if (value == G_MININT)
-    desc = g_strdup ("G_MININT");
-  else if (value == G_MAXUINT)
-    desc = g_strdup ("G_MAXUINT");
-  else if (value == G_MAXLONG)
-    desc = g_strdup ("G_MAXLONG");
-  else if (value == G_MINLONG)
-    desc = g_strdup ("G_MINLONG");
-  else if (value == G_MAXULONG)
-    desc = g_strdup ("G_MAXULONG");
-  else if (value == G_MAXINT64)
-    desc = g_strdup ("G_MAXINT64");
-  else if (value == G_MININT64)
-    desc = g_strdup ("G_MININT64");
-  else
-    desc = g_strdup_printf ("%" G_GINT64_FORMAT, value);
-
-  return desc;
-}
-
-static gchar*
-describe_unsigned_constant (guint64 value)
-{
-  gchar *desc;
-
-  if (value == G_MAXINT)
-    desc = g_strdup ("G_MAXINT");
-  else if (value == G_MININT)
-    desc = g_strdup ("G_MININT");
-  else if (value == G_MAXUINT)
-    desc = g_strdup ("G_MAXUINT");
-  else if (value == G_MAXLONG)
-    desc = g_strdup ("G_MAXLONG");
-  else if (value == G_MINLONG)
-    desc = g_strdup ("G_MINLONG");
-  else if (value == G_MAXULONG)
-    desc = g_strdup ("G_MAXULONG");
-  else if (value == G_MAXINT64)
-    desc = g_strdup ("G_MAXINT64");
-  else if (value == G_MININT64)
-    desc = g_strdup ("G_MININT64");
-  else if (value == G_MAXUINT64)
-    desc = g_strdup ("G_MAXUINT64");
-  else
-    desc = g_strdup_printf ("%" G_GUINT64_FORMAT, value);
-
-  return desc;
-}
-
-static gchar*
-describe_type (GParamSpec *spec)
-{
-  gchar *desc;
-  gchar *lower;
-  gchar *upper;
-
-  if (G_IS_PARAM_SPEC_CHAR (spec))
-    {
-      GParamSpecChar *pspec = G_PARAM_SPEC_CHAR (spec);
-
-      lower = describe_signed_constant (pspec->minimum);
-      upper = describe_signed_constant (pspec->maximum);
-      if (pspec->minimum == G_MININT8 && pspec->maximum == G_MAXINT8)
-	desc = g_strdup ("");
-      else if (pspec->minimum == G_MININT8)
-	desc = g_strdup_printf ("<= %s", upper);
-      else if (pspec->maximum == G_MAXINT8)
-	desc = g_strdup_printf (">= %s", lower);
-      else
-	desc = g_strdup_printf ("[%s,%s]", lower, upper);
-      g_free (lower);
-      g_free (upper);
-    }
-  else if (G_IS_PARAM_SPEC_UCHAR (spec))
-    {
-      GParamSpecUChar *pspec = G_PARAM_SPEC_UCHAR (spec);
-
-      lower = describe_unsigned_constant (pspec->minimum);
-      upper = describe_unsigned_constant (pspec->maximum);
-      if (pspec->minimum == 0 && pspec->maximum == G_MAXUINT8)
-	desc = g_strdup ("");
-      else if (pspec->minimum == 0)
-	desc = g_strdup_printf ("<= %s", upper);
-      else if (pspec->maximum == G_MAXUINT8)
-	desc = g_strdup_printf (">= %s", lower);
-      else
-	desc = g_strdup_printf ("[%s,%s]", lower, upper);
-      g_free (lower);
-      g_free (upper);
-    }
-  else if (G_IS_PARAM_SPEC_INT (spec))
-    {
-      GParamSpecInt *pspec = G_PARAM_SPEC_INT (spec);
-
-      lower = describe_signed_constant (pspec->minimum);
-      upper = describe_signed_constant (pspec->maximum);
-      if (pspec->minimum == G_MININT && pspec->maximum == G_MAXINT)
-	desc = g_strdup ("");
-      else if (pspec->minimum == G_MININT)
-	desc = g_strdup_printf ("<= %s", upper);
-      else if (pspec->maximum == G_MAXINT)
-	desc = g_strdup_printf (">= %s", lower);
-      else
-	desc = g_strdup_printf ("[%s,%s]", lower, upper);
-      g_free (lower);
-      g_free (upper);
-    }
-  else if (G_IS_PARAM_SPEC_UINT (spec))
-    {
-      GParamSpecUInt *pspec = G_PARAM_SPEC_UINT (spec);
-
-      lower = describe_unsigned_constant (pspec->minimum);
-      upper = describe_unsigned_constant (pspec->maximum);
-      if (pspec->minimum == 0 && pspec->maximum == G_MAXUINT)
-	desc = g_strdup ("");
-      else if (pspec->minimum == 0)
-	desc = g_strdup_printf ("<= %s", upper);
-      else if (pspec->maximum == G_MAXUINT)
-	desc = g_strdup_printf (">= %s", lower);
-      else
-	desc = g_strdup_printf ("[%s,%s]", lower, upper);
-      g_free (lower);
-      g_free (upper);
-    }
-  else if (G_IS_PARAM_SPEC_LONG (spec))
-    {
-      GParamSpecLong *pspec = G_PARAM_SPEC_LONG (spec);
-
-      lower = describe_signed_constant (pspec->minimum);
-      upper = describe_signed_constant (pspec->maximum);
-      if (pspec->minimum == G_MINLONG && pspec->maximum == G_MAXLONG)
-	desc = g_strdup ("");
-      else if (pspec->minimum == G_MINLONG)
-	desc = g_strdup_printf ("<= %s", upper);
-      else if (pspec->maximum == G_MAXLONG)
-	desc = g_strdup_printf (">= %s", lower);
-      else
-	desc = g_strdup_printf ("[%s,%s]", lower, upper);
-      g_free (lower);
-      g_free (upper);
-    }
-  else if (G_IS_PARAM_SPEC_ULONG (spec))
-    {
-      GParamSpecULong *pspec = G_PARAM_SPEC_ULONG (spec);
-      gchar *upper;
-
-      lower = describe_unsigned_constant (pspec->minimum);
-      upper = describe_unsigned_constant (pspec->maximum);
-      if (pspec->minimum == 0 && pspec->maximum == G_MAXULONG)
-	desc = g_strdup ("");
-      else if (pspec->minimum == 0)
-	desc = g_strdup_printf ("<= %s", upper);
-      else if (pspec->maximum == G_MAXULONG)
-	desc = g_strdup_printf (">= %s", lower);
-      else
-	desc = g_strdup_printf ("[%s,%s]", lower, upper);
-      g_free (lower);
-      g_free (upper);
-    }
-  else if (G_IS_PARAM_SPEC_INT64 (spec))
-    {
-      GParamSpecInt64 *pspec = G_PARAM_SPEC_INT64 (spec);
-
-      lower = describe_signed_constant (pspec->minimum);
-      upper = describe_signed_constant (pspec->maximum);
-      if (pspec->minimum == G_MININT64 && pspec->maximum == G_MAXINT64)
-	desc = g_strdup ("");
-      else if (pspec->minimum == G_MININT64)
-	desc = g_strdup_printf ("<= %s", upper);
-      else if (pspec->maximum == G_MAXINT64)
-	desc = g_strdup_printf (">= %s", lower);
-      else
-	desc = g_strdup_printf ("[%s,%s]", lower, upper);
-      g_free (lower);
-      g_free (upper);
-    }
-  else if (G_IS_PARAM_SPEC_UINT64 (spec))
-    {
-      GParamSpecUInt64 *pspec = G_PARAM_SPEC_UINT64 (spec);
-
-      lower = describe_unsigned_constant (pspec->minimum);
-      upper = describe_unsigned_constant (pspec->maximum);
-      if (pspec->minimum == 0 && pspec->maximum == G_MAXUINT64)
-	desc = g_strdup ("");
-      else if (pspec->minimum == 0)
-	desc = g_strdup_printf ("<= %s", upper);
-      else if (pspec->maximum == G_MAXUINT64)
-	desc = g_strdup_printf (">= %s", lower);
-      else
-	desc = g_strdup_printf ("[%s,%s]", lower, upper);
-      g_free (lower);
-      g_free (upper);
-    }
-  else if (G_IS_PARAM_SPEC_FLOAT (spec))
-    {
-      GParamSpecFloat *pspec = G_PARAM_SPEC_FLOAT (spec);
-
-      lower = describe_double_constant (pspec->minimum);
-      upper = describe_double_constant (pspec->maximum);
-      if (pspec->minimum == -G_MAXFLOAT && pspec->maximum == G_MAXFLOAT)
-	desc = g_strdup ("");
-      else if (pspec->minimum == -G_MAXFLOAT)
-	desc = g_strdup_printf ("<= %s", upper);
-      else if (pspec->maximum == G_MAXFLOAT)
-	desc = g_strdup_printf (">= %s", lower);
-      else
-	desc = g_strdup_printf ("[%s,%s]", lower, upper);
-      g_free (lower);
-      g_free (upper);
-    }
-  else if (G_IS_PARAM_SPEC_DOUBLE (spec))
-    {
-      GParamSpecDouble *pspec = G_PARAM_SPEC_DOUBLE (spec);
-
-      lower = describe_double_constant (pspec->minimum);
-      upper = describe_double_constant (pspec->maximum);
-      if (pspec->minimum == -G_MAXDOUBLE && pspec->maximum == G_MAXDOUBLE)
-	desc = g_strdup ("");
-      else if (pspec->minimum == -G_MAXDOUBLE)
-	desc = g_strdup_printf ("<= %s", upper);
-      else if (pspec->maximum == G_MAXDOUBLE)
-	desc = g_strdup_printf (">= %s", lower);
-      else
-	desc = g_strdup_printf ("[%s,%s]", lower, upper);
-      g_free (lower);
-      g_free (upper);
-    }
-  else
-    {
-      desc = g_strdup ("");
-    }
-
-  return desc;
-}
-
-static gchar*
-describe_default (GParamSpec *spec)
-{
-  gchar *desc;
-
-  if (G_IS_PARAM_SPEC_CHAR (spec))
-    {
-      GParamSpecChar *pspec = G_PARAM_SPEC_CHAR (spec);
-
-      desc = g_strdup_printf ("%d", pspec->default_value);
-    }
-  else if (G_IS_PARAM_SPEC_UCHAR (spec))
-    {
-      GParamSpecUChar *pspec = G_PARAM_SPEC_UCHAR (spec);
-
-      desc = g_strdup_printf ("%u", pspec->default_value);
-    }
-  else if (G_IS_PARAM_SPEC_BOOLEAN (spec))
-    {
-      GParamSpecBoolean *pspec = G_PARAM_SPEC_BOOLEAN (spec);
-
-      desc = g_strdup_printf ("%s", pspec->default_value ? "TRUE" : "FALSE");
-    }
-  else if (G_IS_PARAM_SPEC_INT (spec))
-    {
-      GParamSpecInt *pspec = G_PARAM_SPEC_INT (spec);
-
-      desc = g_strdup_printf ("%d", pspec->default_value);
-    }
-  else if (G_IS_PARAM_SPEC_UINT (spec))
-    {
-      GParamSpecUInt *pspec = G_PARAM_SPEC_UINT (spec);
-
-      desc = g_strdup_printf ("%u", pspec->default_value);
-    }
-  else if (G_IS_PARAM_SPEC_LONG (spec))
-    {
-      GParamSpecLong *pspec = G_PARAM_SPEC_LONG (spec);
-
-      desc = g_strdup_printf ("%ld", pspec->default_value);
-    }
-  else if (G_IS_PARAM_SPEC_LONG (spec))
-    {
-      GParamSpecULong *pspec = G_PARAM_SPEC_ULONG (spec);
-
-      desc = g_strdup_printf ("%lu", pspec->default_value);
-    }
-  else if (G_IS_PARAM_SPEC_INT64 (spec))
-    {
-      GParamSpecInt64 *pspec = G_PARAM_SPEC_INT64 (spec);
-
-      desc = g_strdup_printf ("%" G_GINT64_FORMAT, pspec->default_value);
-    }
-  else if (G_IS_PARAM_SPEC_UINT64 (spec))
-    {
-      GParamSpecUInt64 *pspec = G_PARAM_SPEC_UINT64 (spec);
-
-      desc = g_strdup_printf ("%" G_GUINT64_FORMAT, pspec->default_value);
-    }
-  else if (G_IS_PARAM_SPEC_UNICHAR (spec))
-    {
-      GParamSpecUnichar *pspec = G_PARAM_SPEC_UNICHAR (spec);
-
-      if (g_unichar_isprint (pspec->default_value))
-	desc = g_strdup_printf ("'%c'", pspec->default_value);
-      else
-	desc = g_strdup_printf ("%u", pspec->default_value);
-    }
-  else if (G_IS_PARAM_SPEC_ENUM (spec))
-    {
-      GParamSpecEnum *pspec = G_PARAM_SPEC_ENUM (spec);
-
-      GEnumValue *value = g_enum_get_value (pspec->enum_class, pspec->default_value);
-      if (value)
-	desc = g_strdup_printf ("%s", value->value_name);
-      else
-	desc = g_strdup_printf ("%d", pspec->default_value);
-    }
-  else if (G_IS_PARAM_SPEC_FLAGS (spec))
-    {
-      GParamSpecFlags *pspec = G_PARAM_SPEC_FLAGS (spec);
-      guint default_value;
-      GString *acc;
-
-      default_value = pspec->default_value;
-      acc = g_string_new ("");
-
-      while (default_value)
-	{
-	  GFlagsValue *value = g_flags_get_first_value (pspec->flags_class, default_value);
-
-	  if (!value)
-	    break;
-
-	  if (acc->len > 0)
-	    g_string_append (acc, "|");
-	  g_string_append (acc, value->value_name);
-
-	  default_value &= ~value->value;
-	}
-
-      if (default_value == 0)
-	desc = g_string_free (acc, FALSE);
-      else
-	{
-	  desc = g_strdup_printf ("%d", pspec->default_value);
-	  g_string_free (acc, TRUE);
-	}
-    }
-  else if (G_IS_PARAM_SPEC_FLOAT (spec))
-    {
-      GParamSpecFloat *pspec = G_PARAM_SPEC_FLOAT (spec);
-
-      desc = g_strdup_printf ("%g", pspec->default_value);
-    }
-  else if (G_IS_PARAM_SPEC_DOUBLE (spec))
-    {
-      GParamSpecDouble *pspec = G_PARAM_SPEC_DOUBLE (spec);
-
-      desc = g_strdup_printf ("%lg", pspec->default_value);
-    }
-  else if (G_IS_PARAM_SPEC_STRING (spec))
-    {
-      GParamSpecString *pspec = G_PARAM_SPEC_STRING (spec);
-
-      if (pspec->default_value)
-	{
-	  gchar *esc = g_strescape (pspec->default_value, NULL);
-
-	  desc = g_strdup_printf ("\\"%s\\"", esc);
-
-	  g_free (esc);
-	}
-      else
-	desc = g_strdup_printf ("NULL");
-    }
-  else
-    {
-      desc = g_strdup ("");
-    }
-
-  return desc;
-}
-
-
 static void
 output_widget_args (FILE *fp, GType object_type)
 {
@@ -1319,8 +904,6 @@ output_widget_args (FILE *fp, GType object_type)
   guint n_properties;
   gboolean child_prop;
   gboolean style_prop;
-  gchar *type_desc;
-  gchar *default_value;
 
   if (G_TYPE_IS_CLASSED (object_type))
     {
@@ -1385,12 +968,8 @@ output_widget_args (FILE *fp, GType object_type)
             dot = ".";
         }
 
-	type_desc = describe_type (spec);
-	default_value = describe_default (spec);
-        fprintf (fp, "<ARG>\\n<NAME>%s::%s</NAME>\\n<TYPE>%s</TYPE>\\n<RANGE>%s</RANGE>\\n<FLAGS>%s</FLAGS>\\n<NICK>%s</NICK>\\n<BLURB>%s%s</BLURB>\\n<DEFAULT>%s</DEFAULT>\\n</ARG>\\n\\n",
-	         object_class_name, g_param_spec_get_name (spec), g_type_name (spec->value_type), type_desc, flags, nick ? nick : "(null)", blurb ? blurb : "(null)", dot, default_value);
-	g_free (type_desc);
-	g_free (default_value);
+        fprintf (fp, "<ARG>\\n<NAME>%s::%s</NAME>\\n<TYPE>%s</TYPE>\\n<FLAGS>%s</FLAGS>\\n<NICK>%s</NICK>\\n<BLURB>%s%s</BLURB>\\n</ARG>\\n\\n",
+	         object_class_name, g_param_spec_get_name (spec), g_type_name (spec->value_type), flags, nick ? nick : "(null)", blurb ? blurb : "(null)", dot);
       }
 
     g_free (properties);
