@@ -1,5 +1,14 @@
 2004-04-16  Matthias Clasen  <mclasen@redhat.com>
 
+	* style.css: Style information in a separate stylesheet.
+
+	* gtkdoc-mkhtml.in: Copy css files.
+
+	* Makefile.am (gtkdocdata_DATA): Add style.css
+
+	* gtk-doc.xsl: Use a stylesheet instead of hardwiring 
+	styles.  (#134683, Vincent Torri)
+
 	* gtkdoc-mkdb.in (GetSignals): Organize the properties 
 	descriptions to fit better with the other sections, and 
 	also display information about allowed and default values. 
